--- a/audio-transfer-app/package.json
+++ b/audio-transfer-app/package.json
@@ -1,46 +1,22 @@
 {
   "name": "audio-transfer-app",
-  "private": true,
   "version": "1.0.0",
-  "description": "Stream and play audio across your local network - Web, Mobile & Desktop",
-  "author": "Your Name",
+  "description": "Real-time audio streaming application built with Node.js, Express, Socket.IO, and Bootstrap",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "keywords": ["audio", "streaming", "real-time", "socket.io", "nodejs"],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@headlessui/react": "^2.2.9",
-    "@tailwindcss/postcss": "^4.1.14",
-    "clsx": "^2.1.1",
-    "framer-motion": "^12.23.22",
-    "lucide-react": "^0.544.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.6.0",
-    "react-use": "^17.6.0",
-    "simple-peer": "^9.11.1",
-    "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^3.3.1"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.2",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
-    "@types/simple-peer": "^9.11.8",
-    "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.22",
-    "globals": "^16.4.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "nodemon": "^3.1.10"
   }
 }
